--- a/src/Ozon.MerchandiseService.Presentation/Ozon.MerchandiseService.Presentation.csproj
+++ b/src/Ozon.MerchandiseService.Presentation/Ozon.MerchandiseService.Presentation.csproj
@@ -4,4 +4,14 @@
         <TargetFramework>net5.0</TargetFramework>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Ozon.MerchandiseService.Grpc\Ozon.MerchandiseService.Grpc.csproj" />
+      <ProjectReference Include="..\Ozon.MerchandiseService.HttpModels\Ozon.MerchandiseService.HttpModels.csproj" />
+    </ItemGroup>
 </Project> 
